k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-github-aws
  labels:
    app: react-github-aws

spec:
  type: NodePort

  selector:
    app: react-github-aws

  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 31000
