k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-github-aws
  namespace: react-github-aws
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: traefik

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-github-aws
            port:
              number: 8080
